--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,13 @@
 # Ignore Byebug command history file.
 .byebug_history
 
-node_modules/
+# Ignore node modules
+node_modules
+
+# Ignore bundle
 bundle.js
 bundle.js.map
-.byebug_history
+
+
 .DS_Store
 npm-debug.log
