--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "eslint-plugin-react": "^7.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
