--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-react": "^7.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
