Prepare for Heroku Push

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "eslint-plugin-react": "^7.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
